--- a/demo/app/views/say/hello.html.erb
+++ b/demo/app/views/say/hello.html.erb
@@ -1,2 +1,9 @@
-<h1>Say#hello</h1>
-<p>Find me in app/views/say/hello.html.erb</p>
+<h1>Hello from Rails!</h1>
+<p>
+It is now <%= @time %> </p>
+<ul>
+<% @files.each do |file| %> <li> file name is: <%= file %> </li>
+<% end %></ul>
+<p>
+Time to say
+<%= link_to "Goodbye", say_goodbye_path %>! </p>
