--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -1,14 +1,14 @@
 <% if notice %>
-<aside id="notice"><%= notice %></aside>
+  <aside id="notice"><%= notice %></aside>
 <% end %>
 <h1>Your Pragmatic Code</h1>
 <ul class="catalog">
   <% @products.each do |product| %>
-  <li>
-    <%= image_tag(product.image_url)%>
-    <h2><%= product.title%></h2>
-    <p><%= sanitize(product.description)%></p>
-    <div class="price"><%= product.price%></div>
+    <li>
+      <%= image_tag(product.image_url)%>
+      <h2><%= product.title%></h2>
+      <p><%= sanitize(product.description)%></p>
+      <div class="price"><%= number_to_currency(product.price)%></div>
     <% end %>
   </li>
 </ul>
