--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -10,7 +10,10 @@
           <%= image_tag(product.image_url)%>
           <h2><%= product.title%></h2>
           <p><%= sanitize(product.description)%></p>
-          <div class="price"><%= number_to_currency(product.price, unit: '£')%></div>
+          <div class="price">
+            <%= number_to_currency(product.price)%>
+            <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
+          </div>
         <% end %>
       <% end %>
     <% end %>
