--- a/depot/app/assets/stylesheets/application.scss
+++ b/depot/app/assets/stylesheets/application.scss
@@ -55,7 +55,7 @@ header.main {
       li {
         margin: 0;
         padding: 0.5em;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         letter-spacing: 0.354em;
         a {
           color: #bfb;
@@ -71,4 +71,15 @@ header.main {
   main {
     padding: 0.5em;
   }
+}
+.notice,
+#notice {
+  background: #ffb;
+  border-radius: 0.5em;
+  border: solid 0.177em #882;
+  color: #882;
+  font-weight: bold;
+  margin-bottom: 1em;
+  padding: 1em 1.414em;
+  text-align: center;
 }
