--- a/depot/app/assets/stylesheets/line_items.scss
+++ b/depot/app/assets/stylesheets/line_items.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the LineItems controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+@keyframes line-item-highlight {
+  0% {
+    background: rgb(255, 253, 108);
+  }
+  50% {
+    background: rgb(113, 255, 108);
+  }
+  100% {
+    background: none;
+  }
+}
+
+.line-item-highlight {
+  animation: line-item-highlight 1s;
+}
