up to remove from basket button

--- a/depot/app/views/carts/_cart.html.erb
+++ b/depot/app/views/carts/_cart.html.erb
@@ -12,4 +12,4 @@
   </tfoot>
 </table>
 <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you
-sure?' } %>
+sure?' }, remote: true %>
