--- a/depot/app/views/line_items/_line_item.html.erb
+++ b/depot/app/views/line_items/_line_item.html.erb
@@ -6,6 +6,6 @@
     <td class="quantity"><%= line_item.quantity %></td>
     <td><%= line_item.product.title %></td>
     <td class="price"><%= number_to_currency(line_item.total_price) %></td>
-    <td><%= button_to '-', line_items_path(product_id: line_item.product.id), method: :delete, remote: true %></td>
+    <td><%= button_to '-', line_item, method: :delete, remote: true %></td>
     <td><%= button_to '+', line_items_path(product_id: line_item.product.id), remote: true %></td>
   </tr>
