--- a/depot/app/views/carts/_cart.html.erb
+++ b/depot/app/views/carts/_cart.html.erb
@@ -11,7 +11,8 @@
     </tr>
   </tfoot>
 </table>
+<h2><%= request.path %></h2>
 <div class="actions">
-  <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
-  <%= button_to'Checkout', new_order_path, method: :get, class: "checkout"%>
+  <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, disabled: (request.path.split('/')[1] == "orders" ? true : false) %>
+  <%= button_to'Checkout', new_order_path, method: :get, class: "checkout", disabled: (request.path.split('/')[1] == "orders" ? true : false) %>
 </div>
