--- a/depot/app/views/orders/new.html.erb
+++ b/depot/app/views/orders/new.html.erb
@@ -1,4 +1,5 @@
-<section class="depot_form"> 
+<section class="depot_form">
   <h1>Please Enter Your Details</h1>
-   <%= render 'form', order: @order %>
+  <%= render 'form', order: @order %>
 </section>
+<%= javascript_pack_tag("pay_type") %>
