--- a/depot/app/views/carts/_cart.html.erb
+++ b/depot/app/views/carts/_cart.html.erb
@@ -1,7 +1,7 @@
 <% if notice %>
   <aside id="notice"><%= notice %></aside>
 <% end %>
-<h2>Your Cart</h2>
+<h2><%= t('.title') %></h2>
 <table>
   <%= render(cart.line_items) %>
   <tfoot>
@@ -12,6 +12,6 @@
   </tfoot>
 </table>
 <div class="actions">
-  <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, disabled: (request.path.split('/')[1] == "orders" ? true : false) %>
-  <%= button_to'Checkout', new_order_path, method: :get, class: "checkout", disabled: (request.path.split('/')[1] == "orders" ? true : false) %>
+  <%= button_to t('.empty'), cart, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, disabled: (request.path.split('/')[1] == "orders" ? true : false) %>
+  <%= button_to t('.checkout'), new_order_path, method: :get, class: "checkout", disabled: (request.path.split('/')[1] == "orders" ? true : false) %>
 </div>
