--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all','data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application','data-turbolinks-track': 'reload' %>
+    <script type="text/javascript">
+      I18n.defaultLocale = "<%= I18n.default_locale %>";
+      I18n.locale = "<%= I18n.locale %>";
+    </script>
   </head>
   <body>
     <header class="main">
@@ -17,10 +21,9 @@
           <%= render_if @cart && @cart.line_items.any?, @cart %>
         </div>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/questions">Questions</a></li>
-          <li><a href="/news">News</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="/"><%= t('.home') %></a></li>
+          <li><a href="/questions"><%= t('.questions') %></a></li>
+          <li><a href="/contact"><%= t('.contact') %></a></li>
         </ul>
         <% if session[:user_id] %>
           <nav class="logged_in_nav">
